syntax = "proto3";
import "google/protobuf/any.proto";
package protos;
option go_package = "go-lite/protos";




message AddLocationReq {
  string name = 1;
}

message AddLocationResp {
  uint64 id = 2;
}


message LocationAdded {
  string name = 1;
  uint64 id = 2;
}


message AddProductReq {
  string name = 1;
}


message AddProductResponse {
  uint64 id = 2;
}

message ProductAdded {
  uint64 id = 1;
  string name = 2;
}

message ChangeQuantityReq {
  uint64 location = 1;
  uint64 product = 2;
  uint64 quantity = 3;
}

message QuantityChanged {
  uint64 location = 1;
  uint64 product = 2;
  uint64 quantity = 3;
  uint64 total = 4;
}

message ChangeQuantityResp {
  uint64 total = 1;
}

message ListLocationsRequest {
  uint64 location = 1;
}

message ListLocationsResponse {

}

message ListLocationReq {
  uint64 location = 1;
}

message ListLocationResp {
  message Item {
    uint64 product =1;
    uint64 quantity = 2;
  }

  repeated Item items = 1;
}

message ListLocationsReq {

}

message ListLocationsResp {

}

service InventoryService {
  rpc AddLocation(AddLocationReq) returns (AddLocationResp);
  rpc ListLocations(ListLocationReq) returns (ListLocationsResp);


  rpc AddProduct(AddProductReq) returns (AddProductResponse);
  rpc ChangeQuantity(ChangeQuantityReq) returns (ChangeQuantityResp);
  rpc ListLocation(ListLocationReq) returns (ListLocationResp);
}

message RewindRequest {
  repeated google.protobuf.Any Events = 1;
}
message RewindResponse {

}

message TestCase {
}
